# numerical-methods-in-physics

./: .gitignore  CMakeLists.txt  LEARN.MD  LabTask.h  Plotter.h  README.md  RandomSLAEGenerator.h  SLAETask.h  Timer.h  lab1.cpp  vcpkg.json
.github/workflows/: ci.yml
include/: AsymptoticFuncs.h  ConjugateGradientsSolver.h  GradientDescentSolver.h  IDataGenerator.h  ISolver.h  JacobiSolver.h  LabTask.h  Plotter.h  RandomSLAEGenerator.h  SLAETask.h  SLAE_ExactMethod_Task.h  SLAE_IterMethod_Task.h  SORSolver.h  SeidelSolver.h  ThomasSolver.h
include/Base/: IDataGenerator.h  IIntegralSolver.h  IODESolver.h  IRootFinder.h  IRootSolver.h  ISolver.h  LabTask.h
include/Helpers/: AsymptoticFuncs.h  FFT1D.h  ODEFuncs.h  Plotter.h  refineRootBisection.h
include/Labs/Lab1/SLAEGenerators/: RandomSLAEGenerator.h
include/Labs/Lab1/SLAESolvers/: ConjugateGradientsSolver.h  GradientDescentSolver.h  JacobiSolver.h  SORSolver.h  SeidelSolver.h  ThomasSolver.h
include/Labs/Lab1/Tasks/: SLAE_ExactMethod_Task.h  SLAE_IterMethod_Task.h
include/Labs/Lab2/RootFinders/: BruteForceRootFinder.h  NewtonSolver.h  ParallelRootFinder.h  SimpleIterSolver.h
include/Labs/Lab2/RootSolvers/: BruteForceBisecRootSolver.h  BruteForceRootSolver.h  NewtonSolver.h  ParallelBisecRootSolver.h  ParallelRootSolver.h  SimpleIterSolver.h
include/Labs/Lab2/Tasks/: LampVACHTask.h  RootFindTask.h
include/Labs/Lab3/IntegralSolvers/: AdaptiveSimpsonSolver.h  CentralRectSolver.h  GaussSolver.h  SimpsonSolver.h  TrapezoidSolver.h
include/Labs/Lab3/Tasks/: IntegrateTask.h
include/Labs/Lab4/ODESolvers/: EulerSolver.h  ImprovedEulerSolver.h  RungeKutta4Solver.h
include/Labs/Lab4/Tasks/: IODETaskStrategy.h  ODETask.h
include/Labs/Lab4/Tasks/Strategies/: ClassicStrategy.h  CompareWithExpectedStrategy.h  SolverDependenceStrategy.h  StepDependenceStrategy.h  ToleranceDependenceStrategy.h
include/Labs/Lab5/Tasks/: HeatRodTask.h  TaskBessel.h
include/Labs/Lab6/Tasks/: TaskHeatEquation.h  TaskLaserRod.h
include/Labs/Lab7/Analysis/: WaveSpectrumAnalyzer.h
include/Labs/Lab7/ExactSolutions/: ExactWaveSolutions.h
include/Labs/Lab7/Tasks/: TaskWaveBase.h  TaskWaveExplicit.h  TaskWaveTheta.h  TaskWaveWeighted.h
include/Labs/Special/Additional/Base/: RatchetParams.h
include/Labs/Special/Additional/DffusionSolvers/: DimLessLangevinSolver.h  LangevinSolver.h
include/Labs/Special/Additional/Helpers/: HighTempVelocity5.h  HighTempVelocity7.h
include/Labs/Special/Additional/NoiseGenerator/: DichotomicNoise.h
include/Labs/Special/Additional/NoiseTasks/: INoiseTask.h  (+3 more)
reports/: Lab1.md  Lab2.md  Lab3.md  Lab4.md  Lab5.md  Lab6.md  Lab7.md
reports/Special/: Electrodynamics.md  Lab1.md  Lab3.md  Lab4.md
src/: Task1.cpp  lab1.cpp
src/Labs/Lab1/: Task1.cpp  Task2_1.cpp  Task2_2.cpp  Task2_3.cpp  Task2_4.cpp  Task2_5.cpp  Task3.cpp
src/Labs/Lab2/: Task1.cpp  Task2.cpp  Task3.py
src/Labs/Lab3/: Task1-2.cpp  Task1.cpp  Task2.cpp  Task3.cpp
src/Labs/Lab4/: Task1.cpp  Task2.cpp  Task2_3.cpp
src/Labs/Lab5/: Task1.cpp  Task2.cpp
src/Labs/Lab6/: Task1.cpp  Task1_2.cpp  Task3.cpp
src/Labs/Lab7/: Task1.cpp  Task2.cpp  Task3.cpp
src/Labs/Special/Additional/: Task1.cpp  Task2.cpp  Task3.cpp
src/Labs/Special/Lab1/: Task1B.cpp  Task1C.cpp  Task1D.cpp  Task1E.cpp  Task2.cpp
src/Labs/Special/Lab2/: Task1_5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
src/Labs/Special/Lab3/: Task1.cpp
src/Labs/Special/Lab4/: Task12.cpp
src/Labs/Special/Lab5/: Task1.cpp  Task2.cpp
src/Labs/Special/Lab6/: Task0.cpp  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
(+45 files in other folders)
